@@ -1,4 +1,4 @@
-// Copyright 2020 The Chromium Authors. All rights reserved.
+// Copyright 2020 The Chromium Authors
 // Use of this source code is governed by a BSD-style license that can be
 // found in the LICENSE file.
 
@@ -19,23 +19,19 @@ import androidx.test.filters.SmallTest;
 
 import org.junit.Assert;
 import org.junit.Before;
-import org.junit.Rule;
 import org.junit.Test;
-import org.junit.rules.TestRule;
 import org.junit.runner.RunWith;
 import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.MockitoAnnotations;
 import org.robolectric.Robolectric;
-import org.robolectric.annotation.Config;
 
 import org.chromium.base.test.BaseRobolectricTestRunner;
-import org.chromium.base.test.util.JniMocker;
+import org.chromium.chrome.R;
 import org.chromium.chrome.browser.share.ChromeShareExtras;
 import org.chromium.chrome.browser.share.share_sheet.ChromeOptionShareCallback;
 import org.chromium.chrome.browser.share.share_sheet.ShareSheetLinkToggleCoordinator.LinkToggleState;
 import org.chromium.chrome.browser.tab.Tab;
-import org.chromium.chrome.test.util.browser.Features;
 import org.chromium.components.browser_ui.share.ShareParams;
 import org.chromium.components.dom_distiller.core.DomDistillerUrlUtils;
 import org.chromium.components.dom_distiller.core.DomDistillerUrlUtilsJni;
@@ -43,32 +39,17 @@ import org.chromium.content_public.browser.WebContents;
 import org.chromium.ui.base.WindowAndroid;
 import org.chromium.url.GURL;
 import org.chromium.url.JUnitTestGURLs;
-import org.chromium.url.ShadowGURL;
 
-/**
- * Tests for {@link LinkToTextCoordinator}.
- */
+/** Tests for {@link LinkToTextCoordinator}. */
 @RunWith(BaseRobolectricTestRunner.class)
-@Config(shadows = {ShadowGURL.class})
 public class LinkToTextCoordinatorTest {
-    @Rule
-    public JniMocker jniMocker = new JniMocker();
 
-    @Rule
-    public TestRule mFeatureProcessor = new Features.JUnitProcessor();
-
-    @Mock
-    private ChromeOptionShareCallback mShareCallback;
-    @Mock
-    private WindowAndroid mWindow;
-    @Mock
-    private Tab mTab;
-    @Mock
-    private WebContents mWebContents;
-    @Mock
-    private DomDistillerUrlUtils.Natives mDistillerUrlUtilsJniMock;
-    @Mock
-    private LinkToTextBridge.Natives mLinkToTextBridge;
+    @Mock private ChromeOptionShareCallback mShareCallback;
+    @Mock private WindowAndroid mWindow;
+    @Mock private Tab mTab;
+    @Mock private WebContents mWebContents;
+    @Mock private DomDistillerUrlUtils.Natives mDistillerUrlUtilsJniMock;
+    @Mock private LinkToTextBridge.Natives mLinkToTextBridge;
 
     private LinkToTextCoordinator mLinkToTextCoordinator;
     private Activity mActivity;
@@ -80,8 +61,8 @@ public class LinkToTextCoordinatorTest {
     private boolean mIsRemoteRequestResultSet;
 
     private static final String SELECTED_TEXT = "selection";
-    private static final String VISIBLE_URL = JUnitTestGURLs.EXAMPLE_URL;
-    private static final String BLOCKLIST_URL = JUnitTestGURLs.URL_1;
+    private static final String VISIBLE_URL = JUnitTestGURLs.EXAMPLE_URL.getSpec();
+    private static final String BLOCKLIST_URL = JUnitTestGURLs.URL_1.getSpec();
     private static final String SELECTED_TEXT_LONG =
             "This textbook has more freedom than most (but see some exceptions).";
     private static final long SHARE_START_TIME = 1L;
@@ -119,42 +100,53 @@ public class LinkToTextCoordinatorTest {
     public void setUpTest() {
         mActivity = Robolectric.setupActivity(Activity.class);
         MockitoAnnotations.initMocks(this);
-        jniMocker.mock(DomDistillerUrlUtilsJni.TEST_HOOKS, mDistillerUrlUtilsJniMock);
+        DomDistillerUrlUtilsJni.setInstanceForTesting(mDistillerUrlUtilsJniMock);
         when(mDistillerUrlUtilsJniMock.getOriginalUrlFromDistillerUrl(any(String.class)))
-                .thenAnswer((invocation) -> {
-                    return new GURL((String) invocation.getArguments()[0]);
-                });
+                .thenAnswer(
+                        (invocation) -> {
+                            return new GURL((String) invocation.getArguments()[0]);
+                        });
         doNothing().when(mShareCallback).showShareSheet(any(), any(), anyLong());
         when(mTab.getWebContents()).thenReturn(mWebContents);
         when(mTab.getWindowAndroid()).thenReturn(mWindow);
+        when(mTab.getContext()).thenReturn(mActivity);
 
-        jniMocker.mock(LinkToTextBridgeJni.TEST_HOOKS, mLinkToTextBridge);
-        when(mLinkToTextBridge.shouldOfferLinkToText(any(GURL.class))).thenAnswer((invocation) -> {
-            return !((GURL) invocation.getArguments()[0]).getSpec().equals(BLOCKLIST_URL);
-        });
+        LinkToTextBridgeJni.setInstanceForTesting(mLinkToTextBridge);
+        when(mLinkToTextBridge.shouldOfferLinkToText(any(GURL.class)))
+                .thenAnswer(
+                        (invocation) -> {
+                            return !((GURL) invocation.getArguments()[0])
+                                    .getSpec()
+                                    .equals(BLOCKLIST_URL);
+                        });
         mChromeShareExtras = new ChromeShareExtras.Builder().build();
         mReshareChromeShareExtras =
                 new ChromeShareExtras.Builder().setIsReshareHighlightedText(true).build();
 
-        mLinkToTextCoordinator = Mockito.spy(new LinkToTextCoordinator() {
-            @Override
-            void requestSelector() {
-                // Consider solutions that will not leak implementation details to tests.
-                mLinkToTextCoordinator.mRemoteRequestStatus = RemoteRequestStatus.REQUESTED;
-                if (mIsRemoteRequestResultSet) {
-                    mLinkToTextCoordinator.onRemoteRequestCompleted(
-                            mSelector, mError, mReadyStatus);
-                }
-            }
+        mLinkToTextCoordinator =
+                Mockito.spy(
+                        new LinkToTextCoordinator() {
+                            @Override
+                            void requestSelector() {
+                                // Consider solutions that will not leak implementation details to
+                                // tests.
+                                mLinkToTextCoordinator.mRemoteRequestStatus =
+                                        RemoteRequestStatus.REQUESTED;
+                                if (mIsRemoteRequestResultSet) {
+                                    mLinkToTextCoordinator.onRemoteRequestCompleted(
+                                            mSelector, mError, mReadyStatus);
+                                }
+                            }
 
-            @Override
-            void reshareHighlightedText() {
-                mLinkToTextCoordinator.mRemoteRequestStatus = RemoteRequestStatus.REQUESTED;
-                if (mIsRemoteRequestResultSet) {
-                    mLinkToTextCoordinator.reshareRequestCompleted(mSelector);
-                }
-            }
-        });
+                            @Override
+                            void reshareHighlightedText() {
+                                mLinkToTextCoordinator.mRemoteRequestStatus =
+                                        RemoteRequestStatus.REQUESTED;
+                                if (mIsRemoteRequestResultSet) {
+                                    mLinkToTextCoordinator.reshareRequestCompleted(mSelector);
+                                }
+                            }
+                        });
     }
 
     @Test
@@ -162,10 +154,37 @@ public class LinkToTextCoordinatorTest {
     public void showShareSheetTest_LinkGeneration() {
         String selector = "selector";
         String expectedUrlToShare = VISIBLE_URL + "#:~:text=selector";
-        mLinkToTextCoordinator.initLinkToTextCoordinator(mTab, mShareCallback, mChromeShareExtras,
-                SHARE_START_TIME, VISIBLE_URL, SELECTED_TEXT);
+        mLinkToTextCoordinator.initLinkToTextCoordinator(
+                mTab,
+                mShareCallback,
+                mChromeShareExtras,
+                SHARE_START_TIME,
+                VISIBLE_URL,
+                SELECTED_TEXT,
+                false);
         mLinkToTextCoordinator.onSelectorReady(selector);
         checkShowsShareSheetWithLink(expectedUrlToShare);
+    }
+
+    @Test
+    @SmallTest
+    public void showShareSheetTest_UseLinkInTitle() {
+        String selector = "selector";
+        String expectedUrlToShare = VISIBLE_URL + "#:~:text=selector";
+        mLinkToTextCoordinator.initLinkToTextCoordinator(
+                mTab,
+                mShareCallback,
+                mChromeShareExtras,
+                SHARE_START_TIME,
+                VISIBLE_URL,
+                SELECTED_TEXT,
+                true);
+        mLinkToTextCoordinator.onSelectorReady(selector);
+        checkShowsShareSheetWithLink(expectedUrlToShare);
+        Assert.assertEquals(
+                "Title is different.",
+                mActivity.getString(R.string.sharing_including_link_title_template, VISIBLE_URL),
+                mLinkToTextCoordinator.getShareParams(LinkToggleState.LINK).getTitle());
     }
 
     @Test
@@ -177,8 +196,14 @@ public class LinkToTextCoordinatorTest {
         String expectedUrlToShare =
                 VISIBLE_URL + "#:~:text=selector1&text=selector2&text=selector3";
 
-        mLinkToTextCoordinator.initLinkToTextCoordinator(mTab, mShareCallback, mChromeShareExtras,
-                SHARE_START_TIME, VISIBLE_URL, SELECTED_TEXT);
+        mLinkToTextCoordinator.initLinkToTextCoordinator(
+                mTab,
+                mShareCallback,
+                mChromeShareExtras,
+                SHARE_START_TIME,
+                VISIBLE_URL,
+                SELECTED_TEXT,
+                false);
         mLinkToTextCoordinator.onSelectorReady(fragmentDirective);
         checkShowsShareSheetWithLink(expectedUrlToShare);
     }
@@ -187,10 +212,9 @@ public class LinkToTextCoordinatorTest {
     @SmallTest
     public void showShareSheetTest_EmptySelector() {
         String selector = "";
-        String expectedUrlToShare = "";
 
         mLinkToTextCoordinator.initLinkToTextCoordinator(
-                mTab, mShareCallback, mChromeShareExtras, 1, VISIBLE_URL, SELECTED_TEXT);
+                mTab, mShareCallback, mChromeShareExtras, 1, VISIBLE_URL, SELECTED_TEXT, false);
         mLinkToTextCoordinator.onSelectorReady(selector);
         checkShowsShareSheetWithNoLink();
     }
@@ -198,8 +222,14 @@ public class LinkToTextCoordinatorTest {
     @Test
     @SmallTest
     public void getPreviewTextLongTest() {
-        mLinkToTextCoordinator.initLinkToTextCoordinator(mTab, mShareCallback, mChromeShareExtras,
-                SHARE_START_TIME, VISIBLE_URL, SELECTED_TEXT_LONG);
+        mLinkToTextCoordinator.initLinkToTextCoordinator(
+                mTab,
+                mShareCallback,
+                mChromeShareExtras,
+                SHARE_START_TIME,
+                VISIBLE_URL,
+                SELECTED_TEXT_LONG,
+                false);
         Assert.assertEquals(
                 "This textbook has more freedom t...", mLinkToTextCoordinator.getPreviewText());
     }
@@ -207,16 +237,28 @@ public class LinkToTextCoordinatorTest {
     @Test
     @SmallTest
     public void getPreviewTextTest() {
-        mLinkToTextCoordinator.initLinkToTextCoordinator(mTab, mShareCallback, mChromeShareExtras,
-                SHARE_START_TIME, VISIBLE_URL, SELECTED_TEXT);
+        mLinkToTextCoordinator.initLinkToTextCoordinator(
+                mTab,
+                mShareCallback,
+                mChromeShareExtras,
+                SHARE_START_TIME,
+                VISIBLE_URL,
+                SELECTED_TEXT,
+                false);
         Assert.assertEquals("selection", mLinkToTextCoordinator.getPreviewText());
     }
 
     @Test
     @SmallTest
     public void shareLinkToTextTest_BlocklistUrl() {
-        mLinkToTextCoordinator.initLinkToTextCoordinator(mTab, mShareCallback, mChromeShareExtras,
-                SHARE_START_TIME, BLOCKLIST_URL, SELECTED_TEXT);
+        mLinkToTextCoordinator.initLinkToTextCoordinator(
+                mTab,
+                mShareCallback,
+                mChromeShareExtras,
+                SHARE_START_TIME,
+                BLOCKLIST_URL,
+                SELECTED_TEXT,
+                false);
         mLinkToTextCoordinator.shareLinkToText();
 
         // Check that shows share sheet without link to text
@@ -231,9 +273,11 @@ public class LinkToTextCoordinatorTest {
     @SmallTest
     public void shareLinkToTextTest_GenerationError() {
         mLinkToTextCoordinator.initLinkToTextCoordinator(
-                mTab, mShareCallback, mChromeShareExtras, SHARE_START_TIME, VISIBLE_URL, "");
-        setGenerationRemoteRequestResults("", new Integer(LinkGenerationError.EMPTY_SELECTION),
-                new Integer(LinkGenerationReadyStatus.REQUESTED_AFTER_READY));
+                mTab, mShareCallback, mChromeShareExtras, SHARE_START_TIME, VISIBLE_URL, "", false);
+        setGenerationRemoteRequestResults(
+                "",
+                Integer.valueOf(LinkGenerationError.EMPTY_SELECTION),
+                Integer.valueOf(LinkGenerationReadyStatus.REQUESTED_AFTER_READY));
         mLinkToTextCoordinator.shareLinkToText();
 
         // Check that shows share sheet without link to text
@@ -248,7 +292,7 @@ public class LinkToTextCoordinatorTest {
     @SmallTest
     public void shareLinkToTextTest_Timeout_BeforeRemoteRequestComplete() {
         mLinkToTextCoordinator.initLinkToTextCoordinator(
-                mTab, mShareCallback, mChromeShareExtras, SHARE_START_TIME, VISIBLE_URL, "");
+                mTab, mShareCallback, mChromeShareExtras, SHARE_START_TIME, VISIBLE_URL, "", false);
         mLinkToTextCoordinator.shareLinkToText();
         mLinkToTextCoordinator.timeout();
 
@@ -260,9 +304,10 @@ public class LinkToTextCoordinatorTest {
                 .logFailureMetrics(any(), eq(LinkGenerationError.TIMEOUT));
 
         // Receiving generation result after timeout, should not trigger another sharesheet.
-        mLinkToTextCoordinator.onRemoteRequestCompleted("",
-                new Integer(LinkGenerationError.EMPTY_SELECTION),
-                new Integer(LinkGenerationReadyStatus.REQUESTED_BEFORE_READY));
+        mLinkToTextCoordinator.onRemoteRequestCompleted(
+                "",
+                Integer.valueOf(LinkGenerationError.EMPTY_SELECTION),
+                Integer.valueOf(LinkGenerationReadyStatus.REQUESTED_BEFORE_READY));
         verify(mShareCallback, times(1)).showShareSheet(any(), any(), anyLong());
 
         // No new histogram is recorded.
@@ -274,9 +319,11 @@ public class LinkToTextCoordinatorTest {
     @SmallTest
     public void shareLinkToTextTest_Timeout_AfterRemoteRequestComplete() {
         mLinkToTextCoordinator.initLinkToTextCoordinator(
-                mTab, mShareCallback, mChromeShareExtras, SHARE_START_TIME, VISIBLE_URL, "");
-        setGenerationRemoteRequestResults("selector", new Integer(LinkGenerationError.NONE),
-                new Integer(LinkGenerationReadyStatus.REQUESTED_AFTER_READY));
+                mTab, mShareCallback, mChromeShareExtras, SHARE_START_TIME, VISIBLE_URL, "", false);
+        setGenerationRemoteRequestResults(
+                "selector",
+                Integer.valueOf(LinkGenerationError.NONE),
+                Integer.valueOf(LinkGenerationReadyStatus.REQUESTED_AFTER_READY));
         mLinkToTextCoordinator.shareLinkToText();
 
         // Check that shows share sheet without link to text
@@ -296,7 +343,7 @@ public class LinkToTextCoordinatorTest {
     @SmallTest
     public void shareLinkToTextTest_OmniboxNavigation_BeforeRemoteRequestComplete() {
         mLinkToTextCoordinator.initLinkToTextCoordinator(
-                mTab, mShareCallback, mChromeShareExtras, SHARE_START_TIME, VISIBLE_URL, "");
+                mTab, mShareCallback, mChromeShareExtras, SHARE_START_TIME, VISIBLE_URL, "", false);
         mLinkToTextCoordinator.shareLinkToText();
         mLinkToTextCoordinator.onUpdateUrl(mTab, new GURL(VISIBLE_URL));
 
@@ -308,9 +355,10 @@ public class LinkToTextCoordinatorTest {
                 .logFailureMetrics(any(), eq(LinkGenerationError.OMNIBOX_NAVIGATION));
 
         // Receiving generation result should not trigger another sharesheet.
-        mLinkToTextCoordinator.onRemoteRequestCompleted("",
-                new Integer(LinkGenerationError.EMPTY_SELECTION),
-                new Integer(LinkGenerationReadyStatus.REQUESTED_BEFORE_READY));
+        mLinkToTextCoordinator.onRemoteRequestCompleted(
+                "",
+                Integer.valueOf(LinkGenerationError.EMPTY_SELECTION),
+                Integer.valueOf(LinkGenerationReadyStatus.REQUESTED_BEFORE_READY));
         verify(mShareCallback, times(0)).showShareSheet(any(), any(), anyLong());
 
         // No new histogram is recorded.
@@ -322,7 +370,13 @@ public class LinkToTextCoordinatorTest {
     @SmallTest
     public void shareLinkToTextTest_Reshare_Success() {
         mLinkToTextCoordinator.initLinkToTextCoordinator(
-                mTab, mShareCallback, mReshareChromeShareExtras, SHARE_START_TIME, VISIBLE_URL, "");
+                mTab,
+                mShareCallback,
+                mReshareChromeShareExtras,
+                SHARE_START_TIME,
+                VISIBLE_URL,
+                "",
+                false);
         setReshareRemoteRequestResults("selector");
         mLinkToTextCoordinator.shareLinkToText();
 
@@ -338,7 +392,13 @@ public class LinkToTextCoordinatorTest {
     @SmallTest
     public void shareLinkToTextTest_Reshare_Timeout_BeforeRemoteRequestComplete() {
         mLinkToTextCoordinator.initLinkToTextCoordinator(
-                mTab, mShareCallback, mReshareChromeShareExtras, SHARE_START_TIME, VISIBLE_URL, "");
+                mTab,
+                mShareCallback,
+                mReshareChromeShareExtras,
+                SHARE_START_TIME,
+                VISIBLE_URL,
+                "",
+                false);
         mLinkToTextCoordinator.shareLinkToText();
         mLinkToTextCoordinator.timeout();
 
@@ -361,7 +421,13 @@ public class LinkToTextCoordinatorTest {
     @SmallTest
     public void shareLinkToTextTest_Reshare_Timeout_AfterRemoteRequestComplete() {
         mLinkToTextCoordinator.initLinkToTextCoordinator(
-                mTab, mShareCallback, mReshareChromeShareExtras, SHARE_START_TIME, VISIBLE_URL, "");
+                mTab,
+                mShareCallback,
+                mReshareChromeShareExtras,
+                SHARE_START_TIME,
+                VISIBLE_URL,
+                "",
+                false);
         setReshareRemoteRequestResults("selector");
         mLinkToTextCoordinator.shareLinkToText();
 
@@ -382,7 +448,13 @@ public class LinkToTextCoordinatorTest {
     @SmallTest
     public void shareLinkToTextTest_Reshare_OmniboxNavigation_BeforeRemoteRequestComplete() {
         mLinkToTextCoordinator.initLinkToTextCoordinator(
-                mTab, mShareCallback, mReshareChromeShareExtras, SHARE_START_TIME, VISIBLE_URL, "");
+                mTab,
+                mShareCallback,
+                mReshareChromeShareExtras,
+                SHARE_START_TIME,
+                VISIBLE_URL,
+                "",
+                false);
         mLinkToTextCoordinator.shareLinkToText();
         mLinkToTextCoordinator.onUpdateUrl(mTab, new GURL(VISIBLE_URL));
 
